--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     }
   },
   "dependencies": {
-    "preact": "^10.5.13",
-    "prettier": "^2.4.1"
+    "md5": "^2.3.0",
+    "preact": "^10.5.13"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.0.0",
+    "@types/md5": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "commitizen": "^4.2.4",
@@ -46,7 +47,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-windicss": "^1.4.12",
+    "windicss": "^3.2.0"
   }
 }
