--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "analyze": "source-map-explorer dist/*.js"
   },
   "husky": {
     "hooks": {
@@ -29,7 +30,7 @@
     }
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "flyio": "^0.6.14",
     "md5": "^2.3.0",
     "preact": "^10.5.13"
   },
@@ -49,6 +50,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
+    "source-map-explorer": "^2.5.2",
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
     "vite-plugin-windicss": "^1.4.12",
