--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
-    "eslint": "^8.1.0",
+    "eslint": "7.32.0",
     "eslint-config-preact": "^1.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
