--- a/packages/item-demand/package.json
+++ b/packages/item-demand/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "prts-micro-frontends",
+  "name": "@prts-micro-frontends/item-demand",
   "version": "0.0.0",
   "scripts": {
-    "build": "pnpm run build --filter \"{packages/}\"",
-    "lint:fix": "pnpm run lint:fix --filter \"{packages/}\"",
-    "lint:format": "pnpm run lint:format --filter \"{packages/}\"",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "analyze": "source-map-explorer dist/*.js"
   },
   "dependencies": {
     "flyio": "^0.6.14",
@@ -15,7 +18,6 @@
     "preact": "^10.5.13"
   },
   "devDependencies": {
-    "@babel/core": ">=7.12.10 <8.0.0",
     "@preact/preset-vite": "^2.0.0",
     "@types/md5": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -28,7 +30,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "source-map-explorer": "^2.5.2",
@@ -49,8 +50,8 @@
   },
   "lint-staged": {
     "*.{js,tsx}": [
-      "pnpm run lint:fix",
-      "pnpm run lint:format",
+      "npm run lint:fix",
+      "npm run lint:format",
       "git add"
     ]
   }
