--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint-staged": "lint-staged",
     "commit": "git-cz"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
