--- a/packages/item-demand/package.json
+++ b/packages/item-demand/package.json
@@ -14,6 +14,7 @@
     "preact": "^10.5.13"
   },
   "devDependencies": {
+    "@babel/core": ">=7.12.10 <8.0.0",
     "@preact/preset-vite": "^2.0.0",
     "@types/md5": "^2.3.1",
     "source-map-explorer": "^2.5.2",
