--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "preact": "^10.6.4"
   },
   "devDependencies": {
+    "@babel/core": ">=7.12.10 <8.0.0",
+    "@preact/preset-vite": "^2.1.7",
+    "@types/md5": "^2.3.1",
+    "@types/node": "*",
+    "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "commitizen": "^4.2.4",
@@ -31,9 +36,6 @@
     "prettier": "^2.4.1",
     "source-map-explorer": "^2.5.2",
     "typescript": "<4.5.0",
-    "@babel/core": ">=7.12.10 <8.0.0",
-    "@preact/preset-vite": "^2.1.7",
-    "@types/md5": "^2.3.1",
     "vite": "^2.7.13",
     "vite-plugin-windicss": "^1.6.3",
     "windicss": "^3.4.3"
