--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "flyio": "^0.6.14",
     "md5": "^2.3.0",
-    "preact": "^10.6.4"
+    "preact": "^10.6.4",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@babel/core": ">=7.12.10 <8.0.0",
     "@preact/preset-vite": "^2.1.7",
     "@types/md5": "^2.3.1",
     "@types/node": "*",
-    "@types/react": "^17.0.38",
+    "@types/prop-types": "^15.7.4",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "commitizen": "^4.2.4",
