--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,16 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {
-    "no-unused-vars":"warn"
-  }
+  "overrides": [
+    {
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "rules": {
+        "no-undef": "off",
+        "no-unused-vars": "off"
+      }
+    }
+  ]
 }
