--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "core-js": "^3.21.0",
     "flyio": "^0.6.14",
     "md5": "^2.3.0",
     "preact": "^10.6.5",
