--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "7.32.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
@@ -57,5 +58,8 @@
       "pnpm run lint:fix",
       "git add"
     ]
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
