--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "preact",
-    "plugin:prettier/recommended","plugin:compat/recommended"
+    "plugin:prettier/recommended",
+    "plugin:compat/recommended"
   ],
   "plugins": [
     "@typescript-eslint"
