--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
   "dependencies": {
     "flyio": "^0.6.14",
     "md5": "^2.3.0",
-    "preact": "^10.6.5",
-    "prop-types": "^15.8.1"
+    "preact": "^10.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@preact/preset-vite": "^2.1.7",
     "@types/md5": "^2.3.2",
     "@types/node": "*",
-    "@types/prop-types": "^15.7.4",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "commitizen": "^4.2.4",
