--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@preact/preset-vite": "^2.2.0",
     "@types/md5": "^2.3.2",
     "@types/node": "*",
+    "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "commander": "^9.2.0",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
     "eslint": "7.32.0",
@@ -30,11 +32,13 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "got": "^12.0.4",
     "husky": "^8.0.1",
     "jest": "^27.5.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.6.2",
     "source-map-explorer": "^2.5.2",
+    "tough-cookie": "^4.0.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-windicss": "^1.8.4",
